<resources>
    <string name="app_name">Craft Beer Ireland</string>
    <string name="action_settings">Settings</string>
    <string name="appHelp">This is the help screen for Craft Beer Ireland</string>
    <string name="appHelpExtra">Basically\, if you need help on using this app, you probably shouldn\'t be using it</string>
    <string name="appDisplayName">Craft Beer Ireland</string>
    <string name="appDesc">Craft Beer Ireland provides the user with a quick and easy way to manage a list of coffees and your favourite coffees.</string>
    <string name="appMoreInfo">For more information about Craft Beer Ireland or to provide feedback please visit our website.</string>
    <string name="appAbout">About Craft Beer Ireland</string>
    <string name="appWebsite">https://github.com/kevnokeeffe/Foodie</string>
    <string name="developer">Developed by Kevin O Keeffe</string>

    <string name="searchCoffeesLbl">Search Beer\'s</string>
    <string name="favouritesCoffeeLbl">Favourite Beer\'s</string>
    <string name="addACoffeeLbl">Beer Check In</string>
    <string name="addCoffeeBtnLbl">Add Beer</string>
    <string name="saveCoffeeBtn">Save Beer</string>
    <string name="recentlyViewedLbl">Recently Added Craft Beer\'s</string>
    <string name="coffeeNameLbl">Name :</string>
    <string name="coffeeShopLbl">Bar :</string>
    <string name="coffeePriceLbl">Price :</string>
    <string name="coffeeRatingLbl">Star Rating</string>
    <string name="coffeeDetailsLbl">Full Beer Details</string>
    <string name="informationLbl">Information</string>
    <string name="emptyMessageLbl">You have no Beer\'s added, go have a beer!</string>
    <string name="placeHolder">Placeholder</string>
</resources>
